Add 'avernum_6, deadlight_directors_cut, skyshines_bedlam' to 'autosetup.ini'

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -5,6 +5,9 @@ winetricks = quartz amstream
 [arcanum_of_steamworks_and_magick_obscura]
 win_exe = arcanum.exe
 
+[avernum_6]
+win_exe = Avernum 6.exe
+
 [baldurs_gate_2_complete]
 win_exe = BGMain.exe
 special = mv "$INSTALL_DIR/$GAME_NAME/prefix/drive_c/GOG Games/Baldur's Gate 2"* "$INSTALL_DIR/$GAME_NAME/game" && rm -r "$INSTALL_DIR/$GAME_NAME/drunk" "$INSTALL_DIR/$GAME_NAME/prefix" "$INSTALL_DIR/$GAME_NAME/wine_standalone"
@@ -60,6 +63,10 @@ special = printf 'r_signal_fx "0"' >> "$INSTALL_DIR/$GAME_NAME/game/consortium/c
 dos_exe = DARKLAND\DARKLAND.EXE
 dos_settings_exe = DARKLAND\install
 special = mv "$INSTALL_DIR/$GAME_NAME/tmp/data/noarch/docs/UserManual.pdf" "$INSTALL_DIR/darklands/"
+
+[deadlight_directors_cut]
+win_exe = Binaries/Win64/LOTDGame.exe
+special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_DIR/$GAME_NAME/config.ini"
 
 [death_to_spies]
 win_exe = Smersh.exe
@@ -313,6 +320,9 @@ win_exe = Silence.exe
 [silver]
 win_exe = silver.exe
 winetricks = quartz
+
+[skyshines_bedlam]
+win_exe = win32/Skyshines BEDLAM.exe
 
 [spelunky]
 win_exe = Spelunky.exe
