Add 'perimeter' and 'titan_quest_anniversary_edition' to 'autosetup.ini'

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -228,6 +228,10 @@ winetricks = vcrun2008
 [omikron_the_nomad_soul]
 win_exe = Runtime.exe
 
+[perimeter]
+win_exe = perimeter.exe
+win_settings_exe = config.exe
+
 [planescape_torment]
 win_exe = Torment.exe
 special = mv "$INSTALL_DIR/$GAME_NAME/prefix/drive_c/GOG Games/Planescape Torment"* "$INSTALL_DIR/$GAME_NAME/game" && rm -r "$INSTALL_DIR/$GAME_NAME/drunk" "$INSTALL_DIR/$GAME_NAME/prefix"
@@ -423,6 +427,11 @@ win_reg5 = HKEY_CURRENT_USER\Software\Wine\Direct3D; CheckFloatConstants; REG_SZ
 
 [time_gentlemen_please]
 win_exe = TGP.exe
+
+[titan_quest_anniversary_edition]
+win_exe = tq.exe
+winetricks = d3dx9
+win_reg1 = HKEY_CURRENT_USER\Software\Wine\Direct3D; CheckFloatConstants; REG_SZ; enabled
 
 [treasure_adventure_game]
 win_exe = treasure_adventure_game_1.0.exe
