--- a/autosetup.ini
+++ b/autosetup.ini
@@ -280,6 +280,10 @@ win_exe = RebelGalaxyGOG.exe
 win_settings_exe = GoGLauncher.exe
 winetricks = vcrun2012
 
+[revenant]
+win_exe = revenant.exe
+win_settings_exe = launcher.exe
+
 [robin_hood]
 win_exe = Game.exe
 
