Add 'Bad Mojo Redux'

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -8,6 +8,9 @@ win_exe = arcanum.exe
 [avernum_6]
 win_exe = Avernum 6.exe
 
+[bad_mojo_redux]
+win_exe = launcher.exe
+
 [baldurs_gate_2_complete]
 win_exe = BGMain.exe
 special = mv "$INSTALL_DIR/$GAME_NAME/prefix/drive_c/GOG Games/Baldur's Gate 2"* "$INSTALL_DIR/$GAME_NAME/game" && rm -r "$INSTALL_DIR/$GAME_NAME/drunk" "$INSTALL_DIR/$GAME_NAME/prefix" "$INSTALL_DIR/$GAME_NAME/wine_standalone"
