--- a/autosetup.ini
+++ b/autosetup.ini
@@ -234,6 +234,16 @@ winetricks = vcrun2008
 [omikron_the_nomad_soul]
 win_exe = Runtime.exe
 
+[pathologic]
+win_exe = bin/final/game.exe
+winedlloverrides = d3d9=n,b
+winetricks = d3dx9 amstream quartz devenum wmp9 wmp10
+
+[pathologic_classic_hd_game]
+win_exe = bin/final/game.exe
+winetricks = amstream devenum quartz vcrun2013 wmp9 wmp10
+special = mv "$INSTALL_DIR/$GAME_NAME/game/__support/app/data/"* "$INSTALL_DIR/$GAME_NAME/game/data/"
+
 [perimeter]
 win_exe = perimeter.exe
 win_settings_exe = config.exe
