Move winedlloverrides to 'autosetup.ini'

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -30,6 +30,7 @@ win_exe = BTDT.exe
 
 [beyond_good_and_evil]
 win_exe = BGE.exe
+winedlloverrides = bgew,d3d9=n,b
 special = cp "$INSTALL_DIR/$GAME_NAME/game/__support/dll/eax.dll" "$INSTALL_DIR/$GAME_NAME/game"
 win_reg1 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Beyond Good & Evil; Install path; REG_SZ; C:\Games\beyond_good_and_evil
 win_reg2 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Beyond Good & Evil; Uninstall path; REG_SZ; C:\Games\beyond_good_and_evil\unins000.exe
@@ -40,6 +41,7 @@ winetricks = quartz devenum
 
 [bloodrayne_2]
 win_exe = br2.exe
+winedlloverrides = d3d8=n,b
 winetricks = quartz devenum
 
 [broken_sword_3__the_sleeping_dragon]
@@ -269,8 +271,13 @@ win_reg5 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia; language; REG_S
 win_reg6 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia\GameUpdate; execPath; REG_SZ; C:\Games\prince_of_persia\Prince of Persia.exe
 win_reg7 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia\GameUpdate; info; REG_SZ; 08a0f1c01d540ee143f7ee48a91898fa
 
+[prince_of_persia_the_sands_of_time]
+win_exe = PrinceOfPersia.EXE
+winedlloverrides = pop1w,d3d9=n,b
+
 [prince_of_persia_the_two_thrones]
 win_exe = PrinceOfPersia.exe
+winedlloverrides = pop3w,d3d9=n,b
 win_reg1 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia The Two Thrones\1.00.999; Product_Executable; REG_SZ; PrinceOfPersia.exe
 win_reg2 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia The Two Thrones\1.00.999; Product_Language; REG_SZ; 9
 win_reg3 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia The Two Thrones\1.00.999; Product_Path; REG_SZ; C:\Games\prince_of_persia_the_two_thrones
@@ -279,6 +286,7 @@ win_reg5 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia The Two Thrones\
 
 [prince_of_persia_warrior_within]
 win_exe = PrinceOfPersia.exe
+winedlloverrides = pop2w,d3d9=n,b
 win_reg1 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia Warrior Within\1.00.999; Product_Executable; REG_SZ; PrinceOfPersia.exe
 win_reg2 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia Warrior Within\1.00.999; Product_Language; REG_SZ; 9
 win_reg3 = HKEY_LOCAL_MACHINE\Software\Ubisoft\Prince of Persia Warrior Within\1.00.999; Product_Path; REG_SZ; C:\Games\prince_of_persia_warrior_within
@@ -491,6 +499,10 @@ special = printf '\n[dos]\nems = false' >> "$INSTALL_DIR/$GAME_NAME/dosbox_game.
 [ultima_worlds_of_adventure_2_martian_dreams]
 dos_settings_exe = MARTIAN\INSTALL.EXE
 special = cp "$INSTALL_DIR/$GAME_NAME/game/__support/save/MARTIAN/SAVEGAME/"* "$INSTALL_DIR/$GAME_NAME/game/MARTIAN/SAVEGAME/"
+
+[vampire_the_masquerade_bloodlines]
+win_exe = vampire.exe -game Unofficial_Patch
+winedlloverrides = dbghelp=n,b
 
 [void_the]
 win_exe = bin/win32/Game.exe
