--- a/autosetup.ini
+++ b/autosetup.ini
@@ -67,6 +67,9 @@ win_exe = coman_mp.exe
 win_exe = consortium.exe
 special = printf 'r_signal_fx "0"' >> "$INSTALL_DIR/$GAME_NAME/game/consortium/cfg/config.cfg" && printf "\nprintf '"'r_signal_fx "0"'"' >> "'"$INSTALL_DIR/$GAME_NAME/game/consortium/cfg/config.cfg"' >> "$START_FILE"
 
+[corsairs_gold]
+win_exe = corsairs.exe
+
 [darklands]
 dos_exe = DARKLAND\DARKLAND.EXE
 dos_settings_exe = DARKLAND\install
@@ -75,6 +78,12 @@ special = mv "$INSTALL_DIR/$GAME_NAME/tmp/data/noarch/docs/UserManual.pdf" "$INS
 [deadlight_directors_cut]
 win_exe = Binaries/Win64/LOTDGame.exe
 special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_DIR/$GAME_NAME/config.ini"
+
+[deadly_premonition_directors_cut]
+win_exe = dp.exe
+win_settings_exe = dplauncher.exe
+winetricks = devenum quartz wmp9 wmp10
+special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/add" "$INSTALL_DIR/$GAME_NAME/game/distr" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/distr/DXSETUP.exe"\n"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/distr/physx-9.12.1031-systemsoftware.msi"' >> "$ADDITIONS_FILE"
 
 [death_to_spies]
 win_exe = Smersh.exe
@@ -219,6 +228,10 @@ win_settings_exe = nwn.exe
 winetricks = d3dx9
 special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/app/"* "$INSTALL_DIR/$GAME_NAME/game/" && mv "$INSTALL_DIR/$GAME_NAME/tmp/support/binkw32_ati" "$INSTALL_DIR/$GAME_NAME/game/"
 reg1 = HKEY_LOCAL_MACHINE\Software\BioWare\NWN\Neverwinter; Version; REG_SZ; 1.69
+
+[nosferatu_wrath_of_malachi]
+win_exe = nosferatu.exe
+winetricks = d3dx9 quartz
 
 [nox]
 win_exe = NOX.EXE
@@ -383,6 +396,13 @@ win_reg16 = HKEY_LOCAL_MACHINE\Software\electronic arts\SPORE_EP1; ProductKey; R
 [stories_untold_demo]
 win_exe = Stories Untold Demo.exe
 special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_DIR/$GAME_NAME/config.ini"
+
+[syberia]
+win_exe = game.exe
+special = echo '800 600 16 0 BaseCMO.cmo' > "$INSTALL_DIR/$GAME_NAME/game/player.ini"
+
+[syberia_2]
+win_exe = game.exe
 
 [system_shock_2]
 win_exe = Shock2.exe
