Fix characters case in scripts

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -1,5 +1,5 @@
 [ad_2044]
-win_exe = ad2044start.exe
+win_exe = AD2044Start.exe
 
 [alien_nations]
 win_exe = Bin/AN.exe
@@ -71,7 +71,6 @@ special = printf 'r_signal_fx "0"' >> "$INSTALL_DIR/$GAME_NAME/game/consortium/c
 win_exe = corsairs.exe
 
 [darklands]
-dos_exe = DARKLAND\DARKLAND.EXE
 dos_settings_exe = DARKLAND\install
 special = mv "$INSTALL_DIR/$GAME_NAME/tmp/data/noarch/docs/UserManual.pdf" "$INSTALL_DIR/darklands/"
 
@@ -80,10 +79,10 @@ win_exe = Binaries/Win64/LOTDGame.exe
 special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_DIR/$GAME_NAME/config.ini"
 
 [deadly_premonition_directors_cut]
-win_exe = dp.exe
-win_settings_exe = dplauncher.exe
+win_exe = DP.exe
+win_settings_exe = DPL`auncher.exe
 winetricks = devenum quartz wmp9 wmp10
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/add" "$INSTALL_DIR/$GAME_NAME/game/distr" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/distr/DXSETUP.exe"\n"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/distr/physx-9.12.1031-systemsoftware.msi"' >> "$ADDITIONS_FILE"
+special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/add" "$INSTALL_DIR/$GAME_NAME/game/distr" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/distr/DXSETUP.exe"\n"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/distr/PhysX-9.12.1031-SystemSoftware.msi"' >> "$ADDITIONS_FILE"
 
 [death_to_spies]
 win_exe = Smersh.exe
@@ -230,7 +229,7 @@ special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/app/"* "$INSTALL_DIR/$GAME_NAM
 reg1 = HKEY_LOCAL_MACHINE\Software\BioWare\NWN\Neverwinter; Version; REG_SZ; 1.69
 
 [nosferatu_wrath_of_malachi]
-win_exe = nosferatu.exe
+win_exe = Nosferatu.exe
 winetricks = d3dx9 quartz
 
 [nox]
@@ -250,17 +249,17 @@ winetricks = vcrun2008
 win_exe = Runtime.exe
 
 [pathologic]
-win_exe = bin/final/game.exe
+win_exe = bin/Final/Game.exe
 winedlloverrides = d3d9=n,b
 winetricks = d3dx9 amstream quartz devenum wmp9 wmp10
 
 [pathologic_classic_hd_game]
-win_exe = bin/final/game.exe
+win_exe = bin/Final/Game.exe
 winetricks = amstream devenum quartz vcrun2013 wmp9 wmp10
 special = mv "$INSTALL_DIR/$GAME_NAME/game/__support/app/data/"* "$INSTALL_DIR/$GAME_NAME/game/data/"
 
 [perimeter]
-win_exe = perimeter.exe
+win_exe = Perimeter.exe
 win_settings_exe = config.exe
 
 [planescape_torment]
@@ -318,8 +317,8 @@ win_settings_exe = GoGLauncher.exe
 winetricks = vcrun2012
 
 [revenant]
-win_exe = revenant.exe
-win_settings_exe = launcher.exe
+win_exe = Revenant.exe
+win_settings_exe = Launcher.exe
 
 [robin_hood]
 win_exe = Game.exe
@@ -398,11 +397,11 @@ win_exe = Stories Untold Demo.exe
 special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_DIR/$GAME_NAME/config.ini"
 
 [syberia]
-win_exe = game.exe
+win_exe = Game.exe
 special = echo '800 600 16 0 BaseCMO.cmo' > "$INSTALL_DIR/$GAME_NAME/game/player.ini"
 
 [syberia_2]
-win_exe = game.exe
+win_exe = Game.exe
 
 [system_shock_2]
 win_exe = Shock2.exe
@@ -477,7 +476,7 @@ win_reg5 = HKEY_CURRENT_USER\Software\Wine\Direct3D; CheckFloatConstants; REG_SZ
 win_exe = TGP.exe
 
 [titan_quest_anniversary_edition]
-win_exe = tq.exe
+win_exe = TQ.exe
 winetricks = d3dx9
 win_reg1 = HKEY_CURRENT_USER\Software\Wine\Direct3D; CheckFloatConstants; REG_SZ; enabled
 
