Add 'MDK' to autosetup.ini

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -207,6 +207,10 @@ winetricks = d3dx9
 win_exe = MajestyHD.exe
 winetricks = quartz
 
+[mdk]
+win_exe = MDK3DFX.EXE
+win_settings_exe = nglide_config.exe
+
 [metro_2033_redux]
 win_exe = metro.exe
 special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_DIR/$GAME_NAME/config.ini"
