--- a/autosetup.ini
+++ b/autosetup.ini
@@ -51,6 +51,11 @@ win_exe = BSTSD.exe
 win_exe = bs4pc.exe
 winetricks = d3dx9
 
+[carmageddon_tdr_2000]
+win_exe = TDR2000.exe
+winedlloverrides = winmm=n,b
+special = mv "$INSTALL_DIR/$GAME_NAME/game/__support/app/ASSETS/options.txt" "$INSTALL_DIR/$GAME_NAME/game/ASSETS/"
+
 [commandos_2_men_of_courage]
 win_exe = comm2.exe
 
@@ -80,7 +85,7 @@ special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_D
 
 [deadly_premonition_directors_cut]
 win_exe = DP.exe
-win_settings_exe = DPL`auncher.exe
+win_settings_exe = DPLauncher.exe
 winetricks = devenum quartz wmp9 wmp10
 special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/add" "$INSTALL_DIR/$GAME_NAME/game/distr" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/distr/DXSETUP.exe"\n"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/distr/PhysX-9.12.1031-SystemSoftware.msi"' >> "$ADDITIONS_FILE"
 
