--- a/autosetup.ini
+++ b/autosetup.ini
@@ -541,3 +541,6 @@ special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/add/redist/PhysX_8.10.13_Syste
 [worlds_of_ultima_the_savage_empire]
 dos_settings_exe = SAVAGE\INSTALL.EXE
 special = mv "$INSTALL_DIR/$GAME_NAME/game/__support/save/SAVAGE/SAVEGAME" "$INSTALL_DIR/$GAME_NAME/game/SAVAGE/"
+
+[zombie_shooter_2]
+winetricks = d3dx9
