Add outcast to autosetup.ini

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -257,6 +257,9 @@ winetricks = vcrun2008
 [omikron_the_nomad_soul]
 win_exe = Runtime.exe
 
+[outcast]
+win_exe = OC1.1.exe
+
 [pathologic]
 win_exe = bin/Final/Game.exe
 winedlloverrides = d3d9=n,b
