--- a/autosetup.ini
+++ b/autosetup.ini
@@ -56,6 +56,11 @@ win_exe = TDR2000.exe
 winedlloverrides = winmm=n,b
 special = mv "$INSTALL_DIR/$GAME_NAME/game/__support/app/ASSETS/options.txt" "$INSTALL_DIR/$GAME_NAME/game/ASSETS/"
 
+[celtic_kings_rage_of_war]
+win_exe = Celtic kings.exe
+winetricks = amstream directmusic dsdmo wmp9
+special = mv "$INSTALL_DIR/$GAME_NAME/game/Packs/data003.bfhp" "$INSTALL_DIR/$GAME_NAME/game/Packs/data003.bfhp.bak"
+
 [commandos_2_men_of_courage]
 win_exe = comm2.exe
 
