Update autosetup.ini Use new path that 'Games Nebula' use for unpacking installers.

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -92,7 +92,7 @@ special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_D
 win_exe = DP.exe
 win_settings_exe = DPLauncher.exe
 winetricks = devenum quartz wmp9 wmp10
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/add" "$INSTALL_DIR/$GAME_NAME/game/distr" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/distr/DXSETUP.exe"\n"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/distr/PhysX-9.12.1031-SystemSoftware.msi"' >> "$ADDITIONS_FILE"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/support/add" "$INSTALL_DIR/$GAME_NAME/game/distr" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/distr/DXSETUP.exe"\n"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/distr/PhysX-9.12.1031-SystemSoftware.msi"' >> "$ADDITIONS_FILE"
 
 [death_to_spies]
 win_exe = Smersh.exe
@@ -239,7 +239,7 @@ win_exe = bin/game.exe
 win_exe = nwmain.exe
 win_settings_exe = nwn.exe
 winetricks = d3dx9
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/app/"* "$INSTALL_DIR/$GAME_NAME/game/" && mv "$INSTALL_DIR/$GAME_NAME/tmp/support/binkw32_ati" "$INSTALL_DIR/$GAME_NAME/game/"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/support/app/"* "$INSTALL_DIR/$GAME_NAME/game/" && mv "$INSTALL_DIR/$GAME_NAME/game/support/binkw32_ati" "$INSTALL_DIR/$GAME_NAME/game/"
 reg1 = HKEY_LOCAL_MACHINE\Software\BioWare\NWN\Neverwinter; Version; REG_SZ; 1.69
 
 [nosferatu_wrath_of_malachi]
@@ -342,7 +342,7 @@ win_exe = Game.exe
 
 [saints_row_2]
 win_exe = SR2_pc.exe
-special = cp "$INSTALL_DIR/saints_row_2/tmp/support/add/local/settings.dat" "$INSTALL_DIR/saints_row_2/game/"
+special = cp "$INSTALL_DIR/saints_row_2/game/support/add/local/settings.dat" "$INSTALL_DIR/saints_row_2/game/"
 
 [saints_row_gat_out_of_hell]
 win_exe = Saints Row Gat Out of Hell.exe
@@ -353,12 +353,12 @@ win_exe = Saints Row IV.exe
 [saints_row_the_third_the_full_package]
 win_exe = game_launcher.exe
 win_settings_exe = language_setup.exe
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/language_setup/language_setup.exe" "$INSTALL_DIR/$GAME_NAME/game/"; mv "$INSTALL_DIR/$GAME_NAME/tmp/support/app/"* "$INSTALL_DIR/$GAME_NAME/game/"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/language_setup/language_setup.exe" "$INSTALL_DIR/$GAME_NAME/game/"; mv "$INSTALL_DIR/$GAME_NAME/game/support/app/"* "$INSTALL_DIR/$GAME_NAME/game/"
 
 [sangfroid_tales_of_werewolves]
 win_exe = SangFroid.exe
 winetricks = vcrun2008 d3dx9
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/commonappdata/sangFroidData" "$INSTALL_DIR/$GAME_NAME/game" && printf 'rm "$WINEPREFIX/drive_c/users/Public/Application Data/sangFroidData"\nln -s "$INSTALL_DIR/$GAME_NAME/game/sangFroidData" "$WINEPREFIX/drive_c/users/Public/Application Data/sangFroidData"' >> "$ADDITIONS_FILE"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/commonappdata/sangFroidData" "$INSTALL_DIR/$GAME_NAME/game" && printf 'rm "$WINEPREFIX/drive_c/users/Public/Application Data/sangFroidData"\nln -s "$INSTALL_DIR/$GAME_NAME/game/sangFroidData" "$WINEPREFIX/drive_c/users/Public/Application Data/sangFroidData"' >> "$ADDITIONS_FILE"
 
 [sanitarium]
 win_exe = sntrm.exe
@@ -373,7 +373,7 @@ winetricks = wmp10
 [shadowgrounds_survivor]
 win_exe = survivor.exe
 winetricks = d3dx9 wmp10
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/tmp/PhysX_9.09.0428_SystemSoftware.exe" "$INSTALL_DIR/$GAME_NAME/game/" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/PhysX_9.09.0428_SystemSoftware.exe" /quiet' >> "$ADDITIONS_FILE"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/tmp/PhysX_9.09.0428_SystemSoftware.exe" "$INSTALL_DIR/$GAME_NAME/game/" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/PhysX_9.09.0428_SystemSoftware.exe" /quiet' >> "$ADDITIONS_FILE"
 
 [silence_demo]
 win_exe = Silence.exe
@@ -391,7 +391,7 @@ win_exe = Spelunky.exe
 [spore_collection]
 win_exe = SporebinEP1/SporeApp.exe
 win_settings_exe = language_setup.exe
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/language_setup/language_setup.exe" "$INSTALL_DIR/$GAME_NAME/game/"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/language_setup/language_setup.exe" "$INSTALL_DIR/$GAME_NAME/game/"
 win_reg1 = HKEY_LOCAL_MACHINE\Software\electronic arts\ea games\spore(tm)\ergc; @; REG_SZ; ''
 win_reg2 = HKEY_LOCAL_MACHINE\Software\electronic arts\spore; appdir; REG_SZ; Spore
 win_reg3 = HKEY_LOCAL_MACHINE\Software\electronic arts\spore; datadir; REG_SZ; C:\Games\spore_collection\Data
@@ -517,7 +517,7 @@ win_reg2 = HKEY_LOCAL_MACHINE\Software\Haemimont Games\Tropico3; AppName; REG_SZ
 [two_worlds]
 win_exe = TwoWorlds.exe
 winetricks = d3dx9
-special = mv "$INSTALL_DIR/$GAME_NAME/game" "$INSTALL_DIR/$GAME_NAME/tmp/" && mv "$INSTALL_DIR/$GAME_NAME/tmp/game/Game/TwoWorlds" "$INSTALL_DIR/$GAME_NAME/game" && printf '"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/PhysX-9.13.0604-SystemSoftware-Legacy.msi" /quiet' >> "$ADDITIONS_FILE"
+special = mv "$INSTALL_DIR/$GAME_NAME/game" "$INSTALL_DIR/$GAME_NAME/tmp/" && mv "$INSTALL_DIR/$GAME_NAME/tmp/game/Game/TwoWorlds" "$INSTALL_DIR/$GAME_NAME/game" && printf '"$WINELOADER" msiexec /i "$INSTALL_DIR/$GAME_NAME/game/PhysX-9.13.0604-SystemSoftware-Legacy.msi" /quiet\n' >> "$ADDITIONS_FILE"
 win_reg1 = HKEY_LOCAL_MACHINE\Software\Reality Pump\TwoWorlds\FileSystem; DataPath; REG_SZ; C:\Games\two_worlds\\
 
 [tyrian_2000]
@@ -544,7 +544,7 @@ winedlloverrides = dbghelp=n,b
 win_exe = bin/win32/Game.exe
 win_settings_exe = bin/win32/Config.exe
 winetricks = d3dx9
-special = mv "$INSTALL_DIR/$GAME_NAME/tmp/support/add/redist/PhysX_8.10.13_SystemSoftware.exe" "$INSTALL_DIR/$GAME_NAME/game/" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/PhysX_8.10.13_SystemSoftware.exe" /quiet' >> "$ADDITIONS_FILE"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/support/add/redist/PhysX_8.10.13_SystemSoftware.exe" "$INSTALL_DIR/$GAME_NAME/game/" && printf '"$WINELOADER" "$INSTALL_DIR/$GAME_NAME/game/PhysX_8.10.13_SystemSoftware.exe" /quiet' >> "$ADDITIONS_FILE"
 
 [worlds_of_ultima_the_savage_empire]
 dos_settings_exe = SAVAGE\INSTALL.EXE
