--- a/autosetup.ini
+++ b/autosetup.ini
@@ -206,6 +206,11 @@ win_exe = Larry.exe
 win_exe = LIMBO.exe
 win_settings_exe = language_setup.exe
 
+[mafia]
+win_exe = Game.exe
+win_settings_exe = setup.exe
+winedlloverrides = dinput8=n,b
+
 [mainlining_demo]
 win_exe = MainliningGame.exe
 
