Update 'alien_nations': enable music

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -3,7 +3,9 @@ win_exe = AD2044Start.exe
 
 [alien_nations]
 win_exe = Bin/AN.exe
+winedlloverrides = winmm=n,b
 winetricks = quartz amstream
+special = cp "$INSTALL_DIR/$GAME_NAME/game/__support/add/"* "$INSTALL_DIR/$GAME_NAME/game/Bin/" && cp -r "$INSTALL_DIR/$GAME_NAME/game/__support/save/"* "$INSTALL_DIR/$GAME_NAME/game/"
 
 [arcanum_of_steamworks_and_magick_obscura]
 win_exe = arcanum.exe
