--- a/autosetup.ini
+++ b/autosetup.ini
@@ -61,7 +61,7 @@ special = mv "$INSTALL_DIR/$GAME_NAME/game/__support/app/ASSETS/options.txt" "$I
 [celtic_kings_rage_of_war]
 win_exe = Celtic kings.exe
 winetricks = amstream directmusic dsdmo wmp9
-special = mv "$INSTALL_DIR/$GAME_NAME/game/Packs/data003.bfhp" "$INSTALL_DIR/$GAME_NAME/game/Packs/data003.bfhp.bak"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/Packs/data003.bfhp" "$INSTALL_DIR/$GAME_NAME/game/Packs/data003.bfhp.bak" && cp "$INSTALL_DIR/$GAME_NAME/game/__support/app/"* "$INSTALL_DIR/$GAME_NAME/game/"
 
 [commandos_2_men_of_courage]
 win_exe = comm2.exe
