--- a/autosetup.ini
+++ b/autosetup.ini
@@ -234,7 +234,7 @@ special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_D
 
 [mount_blade]
 win_exe = mount&blade.exe
-win_settings_exe = Language.exe
+win_settings_exe = language_setup.exe
 
 [neighbours_from_hell_1]
 win_exe = bin/game.exe
