Update autosetup.ini (eador_genesis)

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -129,6 +129,7 @@ win_exe = DKII-DX.EXE
 
 [eador_genesis]
 win_exe = Eador.exe
+special = mkdir -p "$INSTALL_DIR/$GAME_NAME/game/save/"
 
 [eador_masters_of_the_broken_world]
 win_exe = eador_mbw.exe
