Add banner_saga to autosetup.ini

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -436,6 +436,9 @@ special = cp "$INSTALL_DIR/$GAME_NAME/game/__support/app/"* "$INSTALL_DIR/$GAME_
 scummvm_name = teenagent
 scummvm_id = teenagent
 
+[the_banner_saga]
+win_exe = win32/The Banner Saga.exe
+
 [the_longest_journey]
 win_exe = game.exe
 win_reg1 = HKEY_USERS\S-1-5-21-0-0-0-1000\Software\Paper Sun\Roots; Fmv; REG_SZ; C:\Games\the_longest_journey\\
