Add script for  gwent_the_witcher_card_game

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -154,6 +154,9 @@ winetricks = amstream devenum quartz wmp9
 win_reg1 = HKEY_LOCAL_MACHINE\SOFTWARE\Metropolis\G17; dst; REG_SZ; C:\Games\gorky_17
 win_reg2 = HKEY_LOCAL_MACHINE\SOFTWARE\Metropolis\G17; src; REG_SZ; C:\Games\gorky_17
 
+[gwent_the_witcher_card_game]
+special = printf '[Settings]\nown_prefix = True' > "$INSTALL_DIR/$GAME_NAME/config.ini"
+
 [heroes_chronicles_chapter_1_warlords_of_the_wasteland]
 win_exe = Warlords of the Wasteland/Warlords.exe
 
@@ -198,9 +201,6 @@ win_settings_exe = winsetup.exe
 [konung_2_blood_of_titans]
 win_exe = Konung2.exe
 winetricks = icodecs quartz
-
-[leisure_suit_larry_love_for_sail]
-win_exe = SIERW5.EXE
 
 [leisure_suit_larry_magna_cum_laude_uncut_and_uncensored]
 win_exe = Larry.exe
