--- a/autosetup.ini
+++ b/autosetup.ini
@@ -561,5 +561,8 @@ special = mv "$INSTALL_DIR/$GAME_NAME/game/support/add/redist/PhysX_8.10.13_Syst
 dos_settings_exe = SAVAGE\INSTALL.EXE
 special = mv "$INSTALL_DIR/$GAME_NAME/game/__support/save/SAVAGE/SAVEGAME" "$INSTALL_DIR/$GAME_NAME/game/SAVAGE/"
 
+[xenonauts_2_demo]
+win_exe = Xenonauts2.exe
+
 [zombie_shooter_2]
 winetricks = d3dx9
