--- a/autosetup.ini
+++ b/autosetup.ini
@@ -414,6 +414,9 @@ win_reg14 = HKEY_LOCAL_MACHINE\Software\electronic arts\SPORE_EP1; DataDir; REG_
 win_reg15 = HKEY_LOCAL_MACHINE\Software\electronic arts\SPORE_EP1; PackID; REG_DWORD; 128448390
 win_reg16 = HKEY_LOCAL_MACHINE\Software\electronic arts\SPORE_EP1; ProductKey; REG_SZ; ''
 
+[stalker_shadow_of_chernobyl]
+win_exe = bin/XR_3DA.exe
+
 [stories_untold_demo]
 win_exe = Stories Untold Demo.exe
 special = printf '[Settings]\nown_prefix = True\nwinearch = win64' > "$INSTALL_DIR/$GAME_NAME/config.ini"
