Update autosetup.ini (eador_mbw)

--- a/autosetup.ini
+++ b/autosetup.ini
@@ -132,8 +132,11 @@ special = mkdir -p "$INSTALL_DIR/$GAME_NAME/game/save/"
 win_exe = eador_mbw.exe
 win_settings_exe = config.exe
 winetricks = quartz devenum wmp9
-special = cp -r "$INSTALL_DIR/$GAME_NAME/game/__support/save/"* "$INSTALL_DIR/$GAME_NAME/game/" && mv "$INSTALL_DIR/$GAME_NAME/game/update.exe" "$INSTALL_DIR/$GAME_NAME/game/update.exe.bak"
+special = mv "$INSTALL_DIR/$GAME_NAME/game/update.exe" "$INSTALL_DIR/$GAME_NAME/game/update.exe.bak"
 win_reg1 = HKEY_LOCAL_MACHINE\Software\GOG.com\Games\1207659194; PATH; REG_SZ; C:\Games\eador_masters_of_the_broken_world
+win_reg2 = HKEY_LOCAL_MACHINE\Software\GOG.com\Games\1207659194; dependsOn; REG_SZ; ""
+win_reg3 = HKEY_LOCAL_MACHINE\Software\Wow6432Node\GOG.com\Games\1207659194; PATH; REG_SZ; C:\Games\eador_masters_of_the_broken_world
+win_reg4 = HKEY_LOCAL_MACHINE\Software\Wow6432Node\GOG.com\Games\1207659194; dependsOn; REG_SZ; ""
 
 [expeditions_conquistador]
 win_exe = Expeditions Conquistador.exe
